--- a/ApplicationDev/Views/Shared/_Layout.cshtml
+++ b/ApplicationDev/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User Manager</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Role Manager</a>
+                    </li>
+                    <li class="nav-item">
+                       <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserRolesDetail">User Manager</a>
                     </li>
                 </ul>
                 <partial name="_LoginPartial"/>
