--- a/ApplicationDev/Views/Store/CreateStore.cshtml
+++ b/ApplicationDev/Views/Store/CreateStore.cshtml
@@ -7,6 +7,11 @@
         <form asp-action="CreateStore">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="UserId" class="control-label"></label>
+               @Html.DropDownListFor(m => m.UserId, Model.UserList, "-Select a Class", new { @class = "form-control" })
+                               <span asp-validation-for="UserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
