--- a/ApplicationDev/Views/Product/Create.cshtml
+++ b/ApplicationDev/Views/Product/Create.cshtml
@@ -28,10 +28,14 @@
                         </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                 @Html.DropDownListFor(m => m.CategoryId, Model.ProductCategoryList, "-Select a Class", new { @class = "form-control" })
-                                               <span asp-validation-for="CategoryId" class="text-danger"></span>
+                @Html.DropDownListFor(m => m.CategoryId, Model.ProductCategoryList, "-Select a Class", new { @class = "form-control" })
+                <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-           
+            <div class="form-group">
+                            <label asp-for="StoreId" class="control-label"></label>
+                             @Html.DropDownListFor(m => m.StoreId, Model.StoreList, "-Select a Class", new { @class = "form-control" })
+                                                           <span asp-validation-for="StoreId" class="text-danger"></span>
+                        </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
