--- a/ApplicationDev/Views/Store/Index.cshtml
+++ b/ApplicationDev/Views/Store/Index.cshtml
@@ -39,9 +39,8 @@
             </td>
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> | *@
-                <a asp-action="Index" asp-route-id="@item?.Id">Details</a> |
                 <a asp-controller="Product" asp-action="ProductInStore" asp-route-id="@item.Id" class="btn btn-success text-white" style="cursor:pointer">
-                                                            <i class="fas fa-user-graduate"></i>Students
+                                                            <i class="fa fa-book" aria-hidden="true"></i> Product
                                                         </a>
                 @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
             </td>
