--- a/ApplicationDev/Views/Shared/_Layout.cshtml
+++ b/ApplicationDev/Views/Shared/_Layout.cshtml
@@ -42,22 +42,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Role Manager</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserRolesDetail">User Manager</a>
-                    </li>
+	            <ul class="navbar-nav flex-grow-1">
+		            <li class="nav-item">
+			            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+		            </li>
+		            <li class="nav-item">
+			            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+		            </li>
+		            <li class="nav-item">
+			            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Role Manager</a>
+		            </li>
+		            <li class="nav-item">
+			            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserRolesDetail">User Manager</a>
+		            </li>
                    
 
-                </ul>
+	            </ul>
+	            @await Html.PartialAsync("_CartPartial")
                 <partial name="_LoginPartial"/>
             </div>
         </div>
