--- a/ApplicationDev/Views/Shared/_Layout.cshtml
+++ b/ApplicationDev/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
+	<meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - ApplicationDev</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/css/bootstrap.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/ApplicationDev.styles.css" asp-append-version="true"/>
     
-    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     	<!-- google font -->
     	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -29,41 +29,97 @@
     	<!-- main style -->
     	<link rel="stylesheet" href="/css/main.css">
     	<!-- responsive -->
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css"> 
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ApplicationDev</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-	            <ul class="navbar-nav flex-grow-1">
-		            <li class="nav-item">
-			            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-		            </li>
-		            <li class="nav-item">
-			            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-		            </li>
-		            <li class="nav-item">
-			            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Role Manager</a>
-		            </li>
-		            <li class="nav-item">
-			            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="UserRolesDetail">User Manager</a>
-		            </li>
-                   
-
-	            </ul>
-	            @await Html.PartialAsync("_CartPartial")
-                <partial name="_LoginPartial"/>
-            </div>
-        </div>
-    </nav>
-</header>
+<!-- header -->
+		<div class="top-header-area" id="sticker">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-sm-12 text-center">
+						<div class="main-menu-wrap">
+							<!-- logo -->
+							<div class="site-logo">
+								<a href="">
+									<img src="img/logo.png" alt="">
+								</a>
+							</div>
+							<!-- logo -->
+							<!-- menu start -->
+							<nav class="main-menu">
+								<ul>
+									<li class="current-list-item"><a href="#">Home</a>
+										<ul class="sub-menu">
+											<li><a href="index.html">Static Home</a></li>
+											<li><a href="index_2.html">Slider Home</a></li>
+										</ul>
+									</li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="#">Pages</a>
+										<ul class="sub-menu">
+											<li><a href="404.html">404 page</a></li>
+											<li><a href="about.html">About</a></li>
+											<li><a href="cart.html">Cart</a></li>
+											<li><a href="checkout.html">Check Out</a></li>
+											<li><a href="contact.html">Contact</a></li>
+											<li><a href="news.html">News</a></li>
+											<li><a href="shop.html">Shop</a></li>
+										</ul>
+									</li>
+									<li><a href="news.html">News</a>
+										<ul class="sub-menu">
+											<li><a href="news.html">News</a></li>
+											<li><a href="single-news.html">Single News</a></li>
+										</ul>
+									</li>
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="shop.html">Shop</a>
+										<ul class="sub-menu">
+											<li><a href="shop.html">Shop</a></li>
+											<li><a href="checkout.html">Check Out</a></li>
+											<li><a href="single-product.html">Single Product</a></li>
+											<li><a href="cart.html">Cart</a></li>
+										</ul>
+									</li>
+									<li>
+										<div class="header-icons">
+											@await Html.PartialAsync("_CartPartial")
+											<partial name="_LoginPartial"/>
+										</div>
+									</li>
+								</ul>
+							</nav>
+							<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+							<div class="mobile-menu"></div>
+							<!-- menu end -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end header -->
+<!-- hero area -->
+	<div class="hero-area hero-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-9 offset-lg-2 text-center">
+					<div class="hero-text">
+						<div class="hero-text-tablecell">
+							<p class="subtitle">Fresh & Organic</p>
+							<h1>Delicious Seasonal Fruits</h1>
+							<div class="hero-btns">
+								<a href="shop.html" class="boxed-btn">Fruit Collection</a>
+								<a href="contact.html" class="bordered-btn">Contact Us</a>
+								<a href="contact.html" class="bordered-btn">Contact Us</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end hero area -->
 <div class="container">
     <main role="main" class="pb-3">
         @RenderBody()
@@ -142,6 +198,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+@await Component.InvokeAsync("Notyf") 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
