--- a/ApplicationDev/Views/Order/OrderDetails.cshtml
+++ b/ApplicationDev/Views/Order/OrderDetails.cshtml
@@ -9,16 +9,13 @@
     <thead>
         <tr>
             <th>
-                Name
+                Title
             </th>
             <th>
-                Code
+                Author
             </th>
             <th>
-                Create At
-            </th>
-            <th>
-                Price of Product
+                Price
             </th>
             <th>
                 Quantity of Order
@@ -45,6 +42,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => product.Price)
                     </td>
+
                 }
             }
             <td>
