--- a/ApplicationDev/Views/Cart/Checkout.cshtml
+++ b/ApplicationDev/Views/Cart/Checkout.cshtml
@@ -37,11 +37,11 @@
                                                         <input asp-for="OrderDate" class="form-control" />
                                                         <span asp-validation-for="OrderDate" class="text-danger"></span>
                                                     </div>
-                                                    <div class="form-group form-check">
+                                                    @*<div class="form-group form-check">
                                                         <label class="form-check-label">
                                                             <input class="form-check-input" asp-for="Paid" /> @Html.DisplayNameFor(model => model.Paid)
                                                         </label>
-                                                    </div>
+                                                    </div>*@
                                                     <div class="form-group">
                                                         <label asp-for="Note" class="control-label"></label>
                                                         <input asp-for="Note" class="form-control" />
