--- a/ApplicationDev/Views/Cart/Index.cshtml
+++ b/ApplicationDev/Views/Cart/Index.cshtml
@@ -32,7 +32,7 @@
 									                               class="btn btn-danger">X</a>
 										 <a href="" data-id="@cartItem.Product.Isbn" class="btn btn-success updateCart">Update Cart</a>
 										 </td>
-									 <td class="product-image"><a href=""><img src="@("~/image/" + cartItem.Product.ImgUrl)" asp-append-version="true" width="50px" height="50px"></a></td>
+									 <td class="product-image"><a href=""><img src="@("" + cartItem.Product.ImgUrl)" asp-append-version="true" width="50px" height="50px"></a></td>
 									 <td class="product-name">@cartItem.Product.Title</td>
 									 <td class="product-price">@cartItem.Product.Price $</td>
 									 <td class="product-quantity"><input type="number" class="@txt_class" value="@cartItem.Quantity" id="@($"quantity-{cartItem.Product.Isbn}")" /></td>
