AppDev-Fix: Done

--- a/ApplicationDev/Views/OderDetails/Manager.cshtml
+++ b/ApplicationDev/Views/OderDetails/Manager.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.ApplicationUser.UserName)
             </td>
             <td>
-                 <a asp-controller="Order" asp-action="OrderDetails" asp-route-id="@item.Id" class="btn btn-success text-white" style="cursor:pointer">
+                 <a asp-controller="OderDetails" asp-action="Details" asp-route-id="@item.Id" class="btn btn-success text-white" style="cursor:pointer">
                                                                                             <i class="fa fa-book" aria-hidden="true"></i> Product
                                                                                         </a>
                 @* <a asp-action="Details" asp-route-id="@item.Id">Details</a> | *@
